# financial-transaction-service

./: .gitignore  Dockerfile  EDA.ipynb  README.md  alembic.ini  docker-compose.yaml  main.py  model.cbm  pipeline.ipynb  pyproject.toml
configs/: app.docker.toml  app.toml  app_test.toml
grafana/dashboards/: main-dashboard.json
grafana/provisioning/datasources/: datasources.yaml
prometheus_data/: prometheus.yml
static/: elm.js  index.html
transaction_service/: config.py  di.py  main.py
transaction_service/controllers/: metrics.py  transactions.py
transaction_service/controllers/middlewares/: metrics_middleware.py  rate_limiting_middleware.py
transaction_service/migrations/: env.py
transaction_service/migrations/versions/: 179e2051663c_initial.py  40ef5922b4bc_create_transactions_table.py  53cf6e1fb0d4_add_new_table.py  679d38767d13_add_expediency_field.py
transaction_service/models/: __init__.py  transaction.py
transaction_service/repositories/: transaction_repository.py
transaction_service/schemas/: transaction.py
transaction_service/services/: ai_service.py  transaction_service.py
transaction_service/tasks/: ai_tasks.py
transaction_service/utils/: cache.py  metrics.py
